# eos-keyring

./: .gitattributes  .gitignore  Makefile.am  README.md  archive.asc  autogen.sh  build-keyring  configure.ac  generate_keyring.sh  gpg.conf  test-config.sh.in  test-expiration  test-import  test-x509-expiration
debian/: .gitignore  changelog  control  copyright  endless-ca-cert.install  endless-ca-cert.postinst  endless-ca-cert.postrm  endless-ca-cert.triggers  eos-dev-keyring.install  eos-infra-keyring.install  eos-keyring.install  files  install  rules
keys/code-signing/: README.md  code-ev-2024.crt  code-ev-2024.csr  code-ev-2025.crt  code-ev-2025.csr
keys/codecs/: ECAK1.pub  ECFAK1.pub  ECHKAK1.pub  ECHNDAK1.pub  ECIAK1.pub  ECMK1.pub  ECOAK1.pub  ECSOLAK1.pub  ECUAK1.pub
keys/efi/: EOS-PAYG-KEK-CA-2019.crt  EOS-PAYG-UEFI-CA-2019.crt  EOS-PAYG-UEFI-Signing-2019.crt  EOS-PAYG-UEFI-Signing-2025.crt  EOS-UEFI-Signing-2020.crt  EOS-UEFI-Signing-2022.crt  EOS-UEFI-Signing-2025.crt  Endless-Secure-Boot-CA.crt
keys/efi/inactive/: Endless-Secure-Boot-Signer-2017-12-01.crt
keys/intermediary/: EISK1.pub
keys/master/: MK1.pub  MK2.pub
keys/signing/: EAPPSERVERPROD1.pub  EAPPSERVERSTAG1.pub  EASK1.pub  ECOLSK1.pub  EFSK1.pub  EIASK1.pub  EIS1.pub  EOSK1.pub  EPASK1.pub  ESBASK1.pub
keys/tls/: endless-ca.crt  endless-intermediate-ca.crt
profile/: endless-ca-trust-user.sh
scripts/: endless-ca-trust-system  endless-ca-trust-user
